feat: add user management functionality with link ownership and authe… (#296)