@@ -9,33 +9,50 @@ import it.robfrank.linklift.application.port.in.NewLinkCommand;
 import it.robfrank.linklift.application.port.in.NewLinkUseCase;
 import it.robfrank.linklift.application.port.out.DomainEventPublisher;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.LocalDateTime;
 import java.util.UUID;
+import org.jspecify.annotations.NonNull;
 
 public class NewLinkService implements NewLinkUseCase {
 
   private final LinkPersistenceAdapter linkPersistenceAdapter;
   private final DomainEventPublisher eventPublisher;
 
-  public NewLinkService(LinkPersistenceAdapter linkPersistenceAdapter, DomainEventPublisher eventPublisher) {
+  public NewLinkService(@NonNull LinkPersistenceAdapter linkPersistenceAdapter, @NonNull DomainEventPublisher eventPublisher) {
     this.linkPersistenceAdapter = linkPersistenceAdapter;
     this.eventPublisher = eventPublisher;
   }
 
   @Override
-  public Link newLink(NewLinkCommand newLinkCommand) {
+  public @NonNull Link newLink(@NonNull NewLinkCommand newLinkCommand) {
     // Validate the link URL
     validateLinkUrl(newLinkCommand.url());
 
-    // Check if link already exists
+    // Validate userId is provided (required for user-owned links)
+    if (newLinkCommand.userId() == null || newLinkCommand.userId().isBlank()) {
+      ValidationException validationException = new ValidationException("Invalid link data");
+      validationException.addFieldError("userId", "User ID is required");
+      throw validationException;
+    }
+
+    // Check if link already exists for this user
     if (linkPersistenceAdapter.findLinkByUrl(newLinkCommand.url()).isPresent()) {
       throw new LinkAlreadyExistsException(newLinkCommand.url());
     }
 
     var id = UUID.randomUUID().toString();
 
-    var link = new Link(id, newLinkCommand.url(), newLinkCommand.title(), newLinkCommand.description(), LocalDateTime.now(), "text/html");
+    var link = new Link(
+      id,
+      newLinkCommand.url(),
+      newLinkCommand.title(),
+      newLinkCommand.description(),
+      LocalDateTime.now(),
+      "text/html",
+      newLinkCommand.userId()
+    );
 
     var savedLink = linkPersistenceAdapter.saveLink(link);
 
@@ -46,7 +63,7 @@ public class NewLinkService implements NewLinkUseCase {
     return savedLink;
   }
 
-  private void validateLinkUrl(String url) {
+  private void validateLinkUrl(@NonNull String url) {
     ValidationException validationException = new ValidationException("Invalid link data");
 
     if (url == null || url.isBlank()) {
@@ -55,8 +72,8 @@ public class NewLinkService implements NewLinkUseCase {
     }
 
     try {
-      new URL(url);
-    } catch (MalformedURLException e) {
+      new URI(url).toURL();
+    } catch (MalformedURLException | URISyntaxException e) {
       validationException.addFieldError("url", "Invalid URL format");
       throw validationException;
     }
